// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Day renders a cell selected 1`] = `
.pounce-0 {
  display: table-cell;
  padding: 8px;
  text-align: center;
  border-radius: 99999px;
  cursor: pointer;
  vertical-align: middle;
}

.pounce-0[aria-selected=true],
[data-selected]>.pounce-0 {
  background-color: #0081c5;
}

.pounce-0:hover {
  background-color: #11a5f3;
}

<div>
  <div
    aria-disabled="false"
    aria-label="Su Nov 01 2020"
    aria-selected="true"
    class="pounce-0"
    role="gridcell"
  >
    1
  </div>
</div>
`;

exports[`Day renders a cell when date is present 1`] = `
.pounce-0 {
  display: table-cell;
  padding: 8px;
  text-align: center;
  border-radius: 99999px;
  cursor: pointer;
  vertical-align: middle;
}

.pounce-0[aria-selected=true],
[data-selected]>.pounce-0 {
  background-color: #0081c5;
}

.pounce-0:hover {
  background-color: #11a5f3;
}

<div>
  <div
    aria-disabled="false"
    aria-label="Su Nov 01 2020"
    aria-selected="false"
    class="pounce-0"
    role="gridcell"
  >
    1
  </div>
</div>
`;

exports[`Day renders a disabled cell 1`] = `
.pounce-0 {
  display: table-cell;
  padding: 8px;
  text-align: center;
  border-radius: 99999px;
  cursor: pointer;
  vertical-align: middle;
}

.pounce-0[aria-selected=true],
[data-selected]>.pounce-0 {
  background-color: #0081c5;
}

.pounce-0:hover {
  background-color: #11a5f3;
}

<div>
  <div
    aria-disabled="true"
    class="pounce-0"
  />
</div>
`;
